--- a/index.html
+++ b/index.html
@@ -5,12 +5,19 @@
           <meta name="viewport" content="width=device-width, initial-scale=1.0">
           <link rel="stylesheet" type="text/css" href="styles.css" />
           <title>My Migizi Website</title>
+          <style>
+                    img {
+                    width: 100%;
+                    max-width:300px;
+                    max-height: auto;
+                    }
+          </style>
 </head>
 
 <h1> boozhoo, hau, han
   <hr>
 <h1> leech lake</h1>
-  <img src="https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcR4DiyLBxakK4fHf4uPjetGtQMVvxZUqB2etA&s" alt="Girl in a jacket" >
+  <img src="https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcR4DiyLBxakK4fHf4uPjetGtQMVvxZUqB2etA&s" alt="leech lake flag" >
   <p>their website is ancient</p>
   <ol>
     <li> kaylin and yasmin is from there </li>
@@ -19,7 +26,7 @@
   </ol>
   <hr>
 <h1> Fond Du Lac</h1>
-  <img src="https://www.dot.state.mn.us/tribaltraining/images/logos/fond-du-lac.jpg" alt="">
+  <img src="https://upload.wikimedia.org/wikipedia/commons/4/41/Bandera_Fond_du_Lac.png" alt="">
   <p>The total land area of these tribal lands is 154.49 square miles.</p>
     <ol>
 <li>the tribe is a participant in the 1837 treaty case. </li>
@@ -38,6 +45,8 @@
     </ul>
   <hr>
 <h1> upper sioux</h1>
+<img src="https://www.unitedstatesbd.com/images/unitedstatesbdcom/bizcategories/4960/image/flag2023nb.png">
+<hr>
   <p>Tribal headquarters in Yellow Medicine County,</p>
     <ul>
       <li>there is only 482 enrolled members</li>
@@ -46,6 +55,8 @@
     </ul>
   <hr>
 <h1> lower sioux</h1>
+          <img src="https://upload.wikimedia.org/wikipedia/commons/c/cc/Flag_of_the_Lower_Sioux_Indian_Community.png">
+<hr>
   <p>its got a brother named upper sioux, and it also got some land back</p>
     <ol>
       <li>lower sioux owns jackpot junction</li>
