--- a/index.html
+++ b/index.html
@@ -11,6 +11,11 @@
                     max-width:300px;
                     max-height: auto;
                     }
+                    Font-family: comicsans 
+
+
+
+                    
           </style>
 </head>
 
