--- a/index.html
+++ b/index.html
@@ -10,12 +10,16 @@
                     width: 100%;
                     max-width:300px;
                     max-height: auto;
+                  Font-family: comicsans 
+                    color: red 
+                    font size: 25px;
+                              font-weight:bold;
+                              background-color: purple;
+                              opacity: 0.2;
+                              fueled by nerdrage 
                     }
-                    Font-family: comicsans 
-
-
-
                     
+          
           </style>
 </head>
 
