--- a/index.html
+++ b/index.html
@@ -45,7 +45,7 @@
  </div>
 <div class="tribe">
 <h1> Fond Du Lac</h1>
-  <img src="https://upload.wikimedia.org/wikipedia/commons/4/41/Bandera_Fond_du_Lac.png" alt="">
+  <img src="https://upload.wikimedia.org/wikipedia/commons/4/41/Bandera_Fond_du_Lac.png" alt="Fond Du Lac Reservation">
   <p>The total land area of these tribal lands is 154.49 square miles.</p>
     <ol>
 <li>the tribe is a participant in the 1837 treaty case. </li>
@@ -55,7 +55,7 @@
  </div>
 <div class="tribe">
 <h1> Red Lake </h1>
-  <img src="https://cdn.forumcomm.com/dims4/default/4913d30/2147483647/strip/true/crop/1535x1023+20+0/resize/840x560!/quality/90/?url=https%3A%2F%2Ffcc-cue-exports-brightspot.s3.us-west-2.amazonaws.com%2Fbemidjipioneer%2Fbinary%2Fred-lake-nation_binary_2988881.jpg" 
+  <img src="https://cdn.forumcomm.com/dims4/default/4913d30/2147483647/strip/true/crop/1535x1023+20+0/resize/840x560!/quality/90/?url=https%3A%2F%2Ffcc-cue-exports-brightspot.s3.us-west-2.amazonaws.com%2Fbemidjipioneer%2Fbinary%2Fred-lake-nation_binary_2988881.jpg"> 
   <p>kija's family is from red lake</p>
     <ul>
 <li>red lake is one of only a few tribes in the us that reisited allotment and the tribe also holds all land in common for the benefit of its members</li>
