--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
           <link rel="stylesheet" type="text/css" href="styles.css" />
           <title>My Migizi Website</title>
           <style>
-                  .tribe {
+                    .tribe {
                       border: 2px solid #000;
                       padding: 10px;
                       margin-bottom: 20px;
@@ -17,7 +17,10 @@
                     max-width:300px;
                     max-height: auto;
                     }
-                    
+
+                    h1 {
+                              text-align: center;
+                    }
           
           </style>
           <style> 
